getLast not available in jdk 17